# job-application-helper

./: .gitignore  README.md  clear_database.py  config.example.json  main.py  pyproject.toml  test_resume.docx  verify_docx.py
.vendor/charset_normalizer-3.4.6.dist-info/: RECORD
docs/: jobstreet-apply.md
job_app_helper/: app.py  config.py  models.py  utils.py
job_app_helper/modules/: application_report.py  company_research.py  cover_letter.py  gap_analysis.py  job_parser.py  jobstreet_apply.py  output_namer.py  query_chat.py  resume_rewrite.py
job_app_helper/prompts/: application_report_prompt.txt  company_research_prompt.txt  cover_letter_prompt.txt  gap_analysis_prompt.txt  job_parser_prompt.txt  query_chat_prompt.txt  resume_rewrite_prompt.txt
job_app_helper/providers/: ai_client.py  computer_use.py
job_app_helper/storage/: repository.py
job_app_helper/utils/: __init__.py  docx_utils.py  timeline.py
job_application_helper.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
resumes/: default_resume.md
tests/: test_apply_repository.py  test_jobstreet_apply.py
tmp/docs/: resume.docx
tmp/report-smoke/: application-report.md  cover-letter.txt  resume.md
