[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "job-application-helper"
version = "0.1.0"
description = "Modular CLI to automate job application workflows"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0",
  "beautifulsoup4>=4.12.0",
  "python-docx>=1.1.2",
]

[tool.setuptools.packages.find]
include = ["job_app_helper*"]
